some changes to item service and created order service

--- a/frontend/frontend/src/app/app.component.html
+++ b/frontend/frontend/src/app/app.component.html
@@ -1,14 +1,8 @@
 <mat-card>
   <mat-toolbar color="primary">
-    <span>{{title}}</span>
+    <span>Magazin electronice si electrocasnince</span>
   </mat-toolbar>
-  Main app component
   <mat-card>
-    <p> info component</p>
-    <app-info></app-info>
-  </mat-card>
-  <mat-card>
-    <p>Other components-pages</p>
     <router-outlet></router-outlet>
   </mat-card>
 </mat-card>
