--- a/frontend/frontend/src/app/pages/content/content.component.html
+++ b/frontend/frontend/src/app/pages/content/content.component.html
@@ -1,4 +1,3 @@
 <mat-card>
-  <p>Demo 2 page component</p>
-  <p>Data passed in url route: {{dataPassedInRoute}}</p>
+  <app-info></app-info>
 </mat-card>
