--- a/frontend/frontend/src/app/pages/main/main.component.html
+++ b/frontend/frontend/src/app/pages/main/main.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-  <p>{{title}}</p>
-  <p> Item 1 with id passed in route name is {{itemFromApi1.productName}}</p>
+  <p>Magazin</p>
+<!--  <p> Item 1 with id passed in route name is {{itemFromApi1.productName}}</p>-->
   <p (click) = "navigateTo()">click</p>>
 </mat-card>
