working auth & added guards & interceptor

--- a/frontend/frontend/src/app/pages/login/login.component.html
+++ b/frontend/frontend/src/app/pages/login/login.component.html
@@ -1,6 +1,6 @@
 <mat-card>
-  <p>Register</p>
-  <form [formGroup] = "registerForm">
+  <p>Login</p>
+  <form [formGroup] = "loginForm">
   <mat-form-field appearance="fill">
     <mat-label>Email</mat-label>
     <input matInput formControlName = "email">
