--- a/frontend/frontend/src/app/pages/main/main.component.html
+++ b/frontend/frontend/src/app/pages/main/main.component.html
@@ -1,5 +1,6 @@
 <mat-card>
-  <p>Magazin</p>
+  <p>Exploreaza magazinul online si comanda aparate electronice la preturi acesibile.</p>
 <!--  <p> Item 1 with id passed in route name is {{itemFromApi1.productName}}</p>-->
-  <p (click) = "navigateTo()">click</p>>
+  <button (click) = "navigateTo()" mat-stroked-button color="accent">Vezi aparate</button>
+  <button (click) = "logout()" mat-stroked-button color="secondary">Logout</button>
 </mat-card>
